[package]
name = "swonode"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.6.20", features = ["macros"] }
chrono = { version = "0.4.31", features = ["serde"] }
future-utils = "0.12.1"
futures = "0.3.29"
nanoid = "0.4.0"
reqwest = { version = "0.11.22", features = ["json"] }
serde = { version = "1.0.190", features = ["derive"] }
surrealdb = { version = "1.0.0", features = ["kv-rocksdb"] }
tokio = { version = "1.33.0", features = ["full"] }
tracing-subscriber = "0.3.17"
